--- a/src/View/AppointmentMainPage.fxml
+++ b/src/View/AppointmentMainPage.fxml
@@ -9,29 +9,29 @@
     <children>
         <TableView fx:id="appointments_Table" layoutX="25.0" layoutY="130.0" prefHeight="342.0" prefWidth="1072.0" style="-fx-background-color: WHITE;">
             <columns>
-                <TableColumn fx:id="appointmentID_Column" maxWidth="3000.0" prefWidth="70.0" text="Appt ID" />
-                <TableColumn fx:id="title_Column" minWidth="0.0" prefWidth="0.0" text="Title" />
-                <TableColumn fx:id="description_Column" prefWidth="175.6666717529297" text="Description" />
-                <TableColumn fx:id="location_Column" minWidth="0.0" prefWidth="108.33334350585938" text="Location" />
-                <TableColumn fx:id="contact_Column" maxWidth="7000.0" prefWidth="89.66665649414062" text="Contact" />
-                <TableColumn fx:id="type_Column" prefWidth="105.33331298828125" text="Type" />
-                <TableColumn fx:id="startDate_Column" prefWidth="91.33331298828125" text="Start Date" />
-                <TableColumn fx:id="startTime_Column" prefWidth="91.0" text="Start Time" />
-                <TableColumn fx:id="endDate_Column" prefWidth="102.33331298828125" text="End Date" />
-                <TableColumn fx:id="endTime_Column" prefWidth="90.6666259765625" text="End Time" />
-                <TableColumn fx:id="customerID_Column" prefWidth="75.3333740234375" text="Customer ID" />
-                <TableColumn fx:id="userID_Column" prefWidth="75.333251953125" text="User ID" />
+                <TableColumn fx:id="appointmentID_Column" maxWidth="3000.0" prefWidth="150" />
+                <TableColumn fx:id="title_Column" minWidth="0.0" prefWidth="175.6666717529297" />
+                <TableColumn fx:id="description_Column" prefWidth="175.6666717529297" />
+                <TableColumn fx:id="location_Column" minWidth="0.0" prefWidth="108.33334350585938" />
+                <TableColumn fx:id="contact_Column" maxWidth="7000.0" prefWidth="89.66665649414062" />
+                <TableColumn fx:id="type_Column" prefWidth="105.33331298828125" />
+                <TableColumn fx:id="startDate_Column" prefWidth="91.33331298828125" />
+                <TableColumn fx:id="startTime_Column" prefWidth="91.0" />
+                <TableColumn fx:id="endDate_Column" prefWidth="102.33331298828125" />
+                <TableColumn fx:id="endTime_Column" prefWidth="90.6666259765625" />
+                <TableColumn fx:id="customerID_Column" prefWidth="75.3333740234375" />
+                <TableColumn fx:id="userID_Column" prefWidth="75.333251953125" />
             </columns>
         </TableView>
-        <Button fx:id="CreateAppointmentButton" layoutX="1114.0" layoutY="341.0" mnemonicParsing="false" onAction="#createAppt" prefHeight="25.0" prefWidth="146.0" style="-fx-background-color: white;" text="CREATE APPOINTMENT" />
-        <Button fx:id="UpdateAppointmentButton" layoutX="1114.0" layoutY="386.0" mnemonicParsing="false" onAction="#updateAppt" prefHeight="25.0" prefWidth="146.0" style="-fx-background-color: white;" text="UPDATE APPOINTMENT" />
-        <Button fx:id="DeleteAppointmentButton" layoutX="1114.0" layoutY="431.0" mnemonicParsing="false" onAction="#deleteAppt" prefHeight="25.0" prefWidth="146.0" style="-fx-background-color: white;" text="DELETE APPOINTMENT" />
-        <Label fx:id="Header" layoutX="504.0" layoutY="13.0" prefHeight="74.0" prefWidth="332.0" style="-fx-font-weight: bold;" text="APPOINTMENTS" textAlignment="CENTER" textFill="#40e1f6">
+        <Button fx:id="CreateAppointmentButton" layoutX="1114.0" layoutY="341.0" mnemonicParsing="false" onAction="#createAppt" prefHeight="25.0" prefWidth="146.0" style="-fx-background-color: white;" />
+        <Button fx:id="UpdateAppointmentButton" layoutX="1114.0" layoutY="386.0" mnemonicParsing="false" onAction="#updateAppt" prefHeight="25.0" prefWidth="146.0" style="-fx-background-color: white;" />
+        <Button fx:id="DeleteAppointmentButton" layoutX="1114.0" layoutY="431.0" mnemonicParsing="false" onAction="#deleteAppt" prefHeight="25.0" prefWidth="146.0" style="-fx-background-color: white;" />
+        <Label fx:id="Header" layoutX="504.0" layoutY="13.0" prefHeight="74.0" prefWidth="332.0" style="-fx-font-weight: bold;" textAlignment="CENTER" textFill="#40e1f6">
             <font>
                 <Font name="Tw Cen MT Condensed" size="54.0" />
             </font>
         </Label>
-        <Button fx:id="CustomersButton" layoutX="25.0" layoutY="33.0" mnemonicParsing="false" onAction="#goToCustomersPage" prefHeight="33.0" prefWidth="151.0" style="-fx-background-color: #40E1F6;" text="CUSTOMERS">
+        <Button fx:id="CustomersButton" layoutX="25.0" layoutY="33.0" mnemonicParsing="false" onAction="#goToCustomersPage" prefHeight="33.0" prefWidth="151.0" style="-fx-background-color: #40E1F6;">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -40,20 +40,14 @@
             <toggleGroup>
                 <ToggleGroup fx:id="ToggleView" />
             </toggleGroup></RadioButton>
-        <RadioButton fx:id="byMonthButton" layoutX="1111.0" layoutY="248.0" mnemonicParsing="false" onAction="#viewToggle" text="This Month" textFill="WHITE"  toggleGroup="$ToggleView" />
+        <RadioButton fx:id="byMonthButton" layoutX="1111.0" layoutY="248.0" mnemonicParsing="false" onAction="#viewToggle" text="This Month" textFill="WHITE" toggleGroup="$ToggleView" />
         <RadioButton fx:id="byWeekButton" layoutX="1111.0" layoutY="212.0" mnemonicParsing="false" onAction="#viewToggle" text="This Week" textFill="WHITE" toggleGroup="$ToggleView" />
-        <Button fx:id="SearchButton" layoutX="1202.0" layoutY="37.0" mnemonicParsing="false" onAction="#searchAppt" prefHeight="25.0" prefWidth="51.0" text="Search" />
-        <TextField fx:id="SearchTextField" layoutX="917.0" layoutY="33.0" prefHeight="33.0" prefWidth="273.0" promptText="Search by Appt. ID or Title">
-            <font>
-                <Font name="System Italic" size="11.0" />
-            </font>
-        </TextField>
-      <Button fx:id="ReportsButton" layoutX="227.0" layoutY="33.0" mnemonicParsing="false" onAction="#goToReportsPage" prefHeight="33.0" prefWidth="151.0" style="-fx-background-color: #40E1F6;" text="REPORTS">
+      <Button fx:id="ReportsButton" layoutX="227.0" layoutY="33.0" mnemonicParsing="false" onAction="#goToReportsPage" prefHeight="33.0" prefWidth="151.0" style="-fx-background-color: #40E1F6;">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Label layoutX="1117.0" layoutY="145.0" style="-fx-background-color: white;" text="FILTER APPOINTMENTS" underline="true">
+      <Label fx:id="filterLabel" layoutX="1117.0" layoutY="145.0" prefHeight="21.0" prefWidth="123.0" style="-fx-background-color: white;" underline="true">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -61,7 +55,7 @@
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
          </padding>
       </Label>
-      <Label layoutX="1153.0" layoutY="296.0" style="-fx-background-color: white;" text="ACTIONS" underline="true">
+      <Label fx:id="actionsLabel" alignment="CENTER" layoutX="1122.0" layoutY="301.0" prefHeight="21.0" prefWidth="114.0" style="-fx-background-color: white;" textAlignment="CENTER" underline="true">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
