--- a/src/View/UpdateAppointmentPage.fxml
+++ b/src/View/UpdateAppointmentPage.fxml
@@ -2,10 +2,41 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.UpdateAppointmentPageController">
+<AnchorPane prefHeight="442.0" prefWidth="978.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.UpdateAppointmentPageController">
    <children>
-      <Label layoutX="286.0" layoutY="40.0" text="update appt page" />
+      <Label fx:id="header" layoutX="420.0" layoutY="32.0" text="UPDATE APPOINTMENT" />
+      <Label fx:id="apptTitleLabel" layoutX="38.0" layoutY="96.0" text="TITLE" />
+      <Label fx:id="apptStartDateLabel" layoutX="38.0" layoutY="231.0" text="START DATE " />
+      <Label fx:id="apptDescriptionLabel" layoutX="262.0" layoutY="97.0" text="DESCRIPTION" />
+      <Label fx:id="apptLocationLabel" layoutX="535.0" layoutY="96.0" text="LOCATION" />
+      <Label fx:id="apptendDateLabel" layoutX="38.0" layoutY="298.0" text="END DATE" />
+      <Label fx:id="apptIDLabel" disable="true" layoutX="37.0" layoutY="160.0" text="APPT ID" />
+      <Label fx:id="apptStartTimeLabel" layoutX="388.0" layoutY="231.0" text="START TIME" />
+      <Label fx:id="apptCustomerIDLabel" layoutX="683.0" layoutY="281.0" text="CUSTOMER ID" />
+      <Label fx:id="apptEndTimeLabel" layoutX="388.0" layoutY="298.0" text="END TIME" />
+      <Label fx:id="apptUserIdLabel" layoutX="684.0" layoutY="332.0" text="USER ID" />
+      <Label fx:id="apptContactLabel" layoutX="685.0" layoutY="229.0" text="CONTACT" />
+      <Label fx:id="apptTypeLabel" layoutX="285.0" layoutY="152.0" text="TYPE" />
+      <TextField fx:id="titleTextfield" layoutX="80.0" layoutY="93.0" />
+      <TextField fx:id="descriptionTextfield" layoutX="348.0" layoutY="92.0" />
+      <TextField fx:id="locationTextfield" layoutX="608.0" layoutY="92.0" />
+      <TextField fx:id="apptIDTextfield"  disable="true" layoutX="94.0" layoutY="156.0" prefHeight="25.0" prefWidth="58.0" />
+      <DatePicker fx:id="startDatePicker" layoutX="123.0" layoutY="227.0" />
+      <DatePicker fx:id="endDatePicker" layoutX="123.0" layoutY="294.0" />
+      <ComboBox fx:id="startTimeComboBox" layoutX="498.0" layoutY="227.0" prefWidth="150.0" />
+      <ComboBox fx:id="endTimeComboBox" layoutX="498.0" layoutY="286.0" prefWidth="150.0" />
+      <ComboBox fx:id="contactComboBox" layoutX="776.0" layoutY="217.0" prefWidth="150.0" />
+      <ComboBox fx:id="customerIDComboBox" layoutX="776.0" layoutY="277.0" prefWidth="150.0" />
+      <ComboBox fx:id="userIDComboBox" layoutX="776.0" layoutY="329.0" prefWidth="150.0" />
+      <TextField fx:id="typeTextfield" layoutX="348.0" layoutY="148.0" />
+      <Button fx:id="saveButton" layoutX="419.0" layoutY="384.0" mnemonicParsing="false" onAction="#saveUpdateAppointment" text="SAVE" />
+      <Button fx:id="backButton" layoutX="26.0" layoutY="19.0" mnemonicParsing="false" onAction="#goToAppointmentsMainPage" text="BACK">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Button>
+      <Button fx:id="cancelButton" layoutX="498.0" layoutY="384.0" mnemonicParsing="false" onAction="#goToAppointmentsMainPage" text="CANCEL" />
    </children>
 </AnchorPane>
