--- a/src/View/TotalApptReport.fxml
+++ b/src/View/TotalApptReport.fxml
@@ -3,14 +3,20 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
+
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="567.0" prefWidth="512.0"
             xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="Controller.TotalApptReport">
-    <children>
-        <Label fx:id="totalApptHeader" layoutX="50" layoutY="20" text="total appts"/>
-        <TableView fx:id="totalApptsTable" prefHeight="400.0" prefWidth="573.0">
-            <TableColumn fx:id="monthCol" text="month"/>
-            <TableColumn fx:id="typeCol" text="type"/>
-            <TableColumn fx:id="totalApptsCol" text="appts"/>
+    <Label fx:id="totalApptHeader" layoutX="218.0" layoutY="27.0" text="total appts"/>
+
+
+    <RadioButton fx:id="typeRadioButton" text="Type" layoutX="50" layoutY="50"/>
+    <RadioButton fx:id="monthRadioButton" text="month" layoutX="50" layoutY="80"/>
+
+    <TableView fx:id="totalApptsTable" layoutX="52.0" layoutY="102.0" prefHeight="400.0" prefWidth="382.0">
+        <columns>
+            <TableColumn fx:id="apptID" prefWidth="106.00003433227539" text="Appt ID"/>
+            <TableColumn fx:id="apptTitle" prefWidth="130.99998474121094" text="Appt Title"/>
+        </columns>
         </TableView>
-    </children>
+    <Label fx:id="totalApptsLabel" text="Total Appointments"/>
 </AnchorPane>
