--- a/src/View/CreateAppointmentPage.fxml
+++ b/src/View/CreateAppointmentPage.fxml
@@ -30,7 +30,8 @@
         <Label fx:id="typeLabel" layoutX="10.0" layoutY="290.0" prefHeight="20.0" prefWidth="85.0" style="-fx-alignment: center-right;" text="TYPE" textFill="WHITE">
             <font>
                 <Font size="14.0" />
-            </font></Label>
+            </font>
+        </Label>
         <TextField fx:id="titleTextField" layoutX="419.0" layoutY="116.0" prefHeight="25.0" prefWidth="170.0" />
         <TextField fx:id="descriptionTextField" layoutX="115.0" layoutY="169.0" prefHeight="54.0" prefWidth="129.0" />
         <TextField fx:id="locationTextField" layoutX="115.0" layoutY="244.0" prefHeight="25.0" prefWidth="129.0" />
@@ -87,6 +88,6 @@
                 <Font size="14.0" />
             </font>
         </Label>
-        <TextField fx:id="type" layoutX="115.0" layoutY="287.0" prefHeight="25.0" prefWidth="129.0" />
+        <TextField fx:id="typeTextfield" layoutX="115.0" layoutY="287.0" prefHeight="25.0" prefWidth="129.0"/>
     </children>
 </AnchorPane>
