--- a/src/View/CreateCustomerPage.fxml
+++ b/src/View/CreateCustomerPage.fxml
@@ -11,7 +11,8 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="backToCustomersMainPage" layoutX="23.0" layoutY="33.0" mnemonicParsing="false" onAction="#goToCustomersMainPage"  />
+       <Button fx:id="backToCustomersMainPage" layoutX="23.0" layoutY="33.0" mnemonicParsing="false"
+               onAction="#goToCustomersMainPage" prefHeight="25.0" prefWidth="40.0"/>
       <Label fx:id="nameLabel" layoutX="58.0" layoutY="109.0" text="Name: " textFill="WHITE" />
       <Label fx:id="phoneLabel" layoutX="57.0" layoutY="157.0" text="Phone: " textFill="WHITE" />
       <Label fx:id="addressLabel" layoutX="53.0" layoutY="206.0" text="Address: " textFill="WHITE" />
@@ -22,9 +23,11 @@
       <TextField fx:id="addressTextfield" layoutX="142.0" layoutY="202.0" />
       <TextField fx:id="phoneTextfield" layoutX="142.0" layoutY="153.0" />
       <TextField fx:id="postalTextfield" layoutX="142.0" layoutY="249.0" />
-      <ComboBox fx:id="countryComboBox" onAction="#countrySelection" layoutX="142.0" layoutY="299.0" prefWidth="150.0" />
+       <ComboBox fx:id="countryComboBox" layoutX="142.0" layoutY="299.0" onAction="#countrySelection"
+                 prefWidth="150.0"/>
       <ComboBox fx:id="divisionComboBox" layoutX="142.0" layoutY="347.0" prefWidth="150.0" />
-      <Button fx:id="addCustomerButton" layoutX="176.0" layoutY="396.0" mnemonicParsing="false" onAction="#addCustomer"  />
+       <Button fx:id="addCustomerButton" layoutX="176.0" layoutY="396.0" mnemonicParsing="false"
+               onAction="#addCustomer"/>
 
    </children>
 </AnchorPane>
