--- a/src/View/UpdateAppointmentPage.fxml
+++ b/src/View/UpdateAppointmentPage.fxml
@@ -4,25 +4,28 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="442.0" prefWidth="978.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.UpdateAppointmentPageController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="442.0" prefWidth="978.0"
+            style="-fx-background-color: #1F1F1F;" xmlns="http://javafx.com/javafx/17.0.2-ea"
+            fx:controller="Controller.UpdateAppointmentPageController">
    <children>
-      <Label fx:id="header" layoutX="420.0" layoutY="32.0" text="UPDATE APPOINTMENT" />
-      <Label fx:id="apptTitleLabel" layoutX="38.0" layoutY="96.0" text="TITLE" />
-      <Label fx:id="apptStartDateLabel" layoutX="38.0" layoutY="231.0" text="START DATE " />
-      <Label fx:id="apptDescriptionLabel" layoutX="262.0" layoutY="97.0" text="DESCRIPTION" />
-      <Label fx:id="apptLocationLabel" layoutX="535.0" layoutY="96.0" text="LOCATION" />
-      <Label fx:id="apptendDateLabel" layoutX="38.0" layoutY="298.0" text="END DATE" />
-      <Label fx:id="apptIDLabel" disable="true" layoutX="37.0" layoutY="160.0" text="APPT ID" />
-      <Label fx:id="apptStartTimeLabel" layoutX="388.0" layoutY="231.0" text="START TIME" />
-      <Label fx:id="apptCustomerIDLabel" layoutX="683.0" layoutY="281.0" text="CUSTOMER ID" />
-      <Label fx:id="apptEndTimeLabel" layoutX="388.0" layoutY="298.0" text="END TIME" />
-      <Label fx:id="apptUserIdLabel" layoutX="684.0" layoutY="332.0" text="USER ID" />
-      <Label fx:id="apptContactLabel" layoutX="685.0" layoutY="229.0" text="CONTACT" />
-      <Label fx:id="apptTypeLabel" layoutX="285.0" layoutY="152.0" text="TYPE" />
+      <Label fx:id="header" layoutX="420.0" layoutY="32.0" text="UPDATE APPOINTMENT" textFill="WHITE"/>
+      <Label fx:id="apptTitleLabel" layoutX="38.0" layoutY="96.0" text="TITLE" textFill="WHITE"/>
+      <Label fx:id="apptStartDateLabel" layoutX="38.0" layoutY="231.0" text="START DATE " textFill="WHITE"/>
+      <Label fx:id="apptDescriptionLabel" layoutX="262.0" layoutY="97.0" text="DESCRIPTION" textFill="WHITE"/>
+      <Label fx:id="apptLocationLabel" layoutX="535.0" layoutY="96.0" text="LOCATION" textFill="WHITE"/>
+      <Label fx:id="apptendDateLabel" layoutX="38.0" layoutY="298.0" text="END DATE" textFill="WHITE"/>
+      <Label fx:id="apptIDLabel" disable="true" layoutX="37.0" layoutY="160.0" text="APPT ID" textFill="WHITE"/>
+      <Label fx:id="apptStartTimeLabel" layoutX="388.0" layoutY="231.0" text="START TIME" textFill="WHITE"/>
+      <Label fx:id="apptCustomerIDLabel" layoutX="683.0" layoutY="281.0" text="CUSTOMER ID" textFill="WHITE"/>
+      <Label fx:id="apptEndTimeLabel" layoutX="388.0" layoutY="298.0" text="END TIME" textFill="WHITE"/>
+      <Label fx:id="apptUserIdLabel" layoutX="684.0" layoutY="332.0" text="USER ID" textFill="WHITE"/>
+      <Label fx:id="apptContactLabel" layoutX="685.0" layoutY="229.0" text="CONTACT" textFill="WHITE"/>
+      <Label fx:id="apptTypeLabel" layoutX="285.0" layoutY="152.0" text="TYPE" textFill="WHITE"/>
       <TextField fx:id="titleTextfield" layoutX="80.0" layoutY="93.0" />
       <TextField fx:id="descriptionTextfield" layoutX="348.0" layoutY="92.0" />
       <TextField fx:id="locationTextfield" layoutX="608.0" layoutY="92.0" />
-      <TextField fx:id="apptIDTextfield"  disable="true" layoutX="94.0" layoutY="156.0" prefHeight="25.0" prefWidth="58.0" />
+      <TextField fx:id="apptIDTextfield" disable="true" layoutX="94.0" layoutY="156.0" prefHeight="25.0"
+                 prefWidth="58.0"/>
       <DatePicker fx:id="startDatePicker" layoutX="123.0" layoutY="227.0" />
       <DatePicker fx:id="endDatePicker" layoutX="123.0" layoutY="294.0" />
       <ComboBox fx:id="startTimeComboBox" layoutX="498.0" layoutY="227.0" prefWidth="150.0" />
